[gd_scene load_steps=11 format=3 uid="uid://xa6g4rbhhk0n"]

[ext_resource type="Script" uid="uid://dpsutxxt40hx1" path="res://scripts/synthesis.gd" id="1_fs2am"]
[ext_resource type="Texture2D" uid="uid://b21srjwis8bne" path="res://assets/animations/cursor.png" id="2_1x7pv"]
[ext_resource type="Texture2D" uid="uid://bp4b38eyail31" path="res://assets/tilesheet.png" id="3_h0e12"]

[sub_resource type="AtlasTexture" id="AtlasTexture_h0e12"]
atlas = ExtResource("2_1x7pv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2fjc"]
atlas = ExtResource("2_1x7pv")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vp20"]
atlas = ExtResource("2_1x7pv")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_g45ba"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0e12")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2fjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vp20")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2fjc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h0e12"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1x7pv"]
bg_color = Color(0.35, 0.35, 0.35, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_g45ba"]
atlas = ExtResource("3_h0e12")
region = Rect2(0, 0, 48, 48)

[node name="Synthesis" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fs2am")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RecipesLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 48.0
offset_top = 48.0
offset_right = 107.0
offset_bottom = 71.0
text = "Recipes"

[node name="RecipesGrid" type="Panel" parent="Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 48.0
offset_top = 96.0
offset_right = 816.0
offset_bottom = 576.0

[node name="Cursor" type="AnimatedSprite2D" parent="Panel/RecipesGrid"]
unique_name_in_owner = true
z_index = 1
position = Vector2(-48, -96)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_g45ba")
autoplay = "default"

[node name="RecipeInfoPanel" type="Panel" parent="Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 864.0
offset_top = 96.0
offset_right = 1104.0
offset_bottom = 576.0

[node name="IngredientsScreen" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
z_index = 1
layout_mode = 0
offset_right = 1152.0
offset_bottom = 672.0
theme_override_styles/panel = SubResource("StyleBoxFlat_h0e12")

[node name="InventoryGrid" type="Panel" parent="IngredientsScreen"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 48.0
offset_top = 96.0
offset_right = 816.0
offset_bottom = 576.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1x7pv")

[node name="InventCursor" type="AnimatedSprite2D" parent="IngredientsScreen/InventoryGrid"]
unique_name_in_owner = true
z_index = 2
position = Vector2(-48, -96)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_g45ba")
autoplay = "default"

[node name="Panel" type="Panel" parent="IngredientsScreen"]
layout_mode = 0
offset_left = 864.0
offset_top = 96.0
offset_right = 1104.0
offset_bottom = 576.0

[node name="MarginContainer" type="MarginContainer" parent="IngredientsScreen/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="IngredientsScreen/Panel/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="IngredientsScreen/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 16

[node name="RecipeSprite" type="TextureRect" parent="IngredientsScreen/Panel/MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = SubResource("AtlasTexture_g45ba")
expand_mode = 4

[node name="RecipeName" type="Label" parent="IngredientsScreen/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Item name"
